<resources>
    <string name="app_name">login app</string>
    <string name="not_registered">Not Registered</string>
    <string name="register">register</string>
    <string name="not_registered_register">Not_Registered? Register</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="todo">TODO</string>
    <string name="reg">REGISTER</string>
    <string name="pass">Password</string>
    <string name="name">Name</string>
    <string name="Email">Email</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
