<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/images">

    <EditText
        android:id="@+id/T1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="150dp"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:importantForAutofill="no" tools:targetApi="o" />

    <EditText
        android:id="@+id/T2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:text="@string/Email"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:text="@string/pass"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:text="@string/confirm_password"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/reg" />
</LinearLayout>
